// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InlineForm > should render 1`] = `
<div
  tabindex="-1"
>
  <form
    class="_tc-editable-text-form_dc7257 tc-editable-text-form"
  >
    <div
      class="form-group"
    >
      <input
        class="_tc-editable-text-form-input_dc7257 tc-editable-text-form-input form-control"
        id="inputTitle"
        type="text"
        value="my text"
      />
    </div>
    <div
      class="_tc-editable-text-form-buttons_dc7257 tc-editable-text-form-buttons"
    >
      <button
        aria-describedby="00000000-0000-4000-8000-000000000000"
        class="_tc-editable-text-form-buttons-icon_dc7257 tc-editable-text-form-buttons-icon _tc-editable-text-form-buttons-cancel_dc7257 tc-editable-text-form-buttons-cancel btn-icon-only btn btn-link"
        data-feature="my.custom.feature.cancel"
        name="action-cancel-title"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-cross"
          focusable="false"
          name="talend-cross"
          pointer-events="none"
          shape-rendering="geometricPrecision"
        />
      </button>
      <button
        aria-describedby="00000000-0000-4000-8000-000000000000"
        class="_tc-editable-text-form-buttons-icon_dc7257 tc-editable-text-form-buttons-icon _tc-editable-text-form-buttons-submit_dc7257 tc-editable-text-form-buttons-submit btn-icon-only btn btn-link"
        data-feature="my.custom.feature.submit"
        name="action-submit-title"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-check"
          focusable="false"
          name="talend-check"
          pointer-events="none"
          shape-rendering="geometricPrecision"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`InlineForm should render 1`] = `
<div
  tabindex="-1"
>
  <form
    class="theme-tc-editable-text-form tc-editable-text-form"
  >
    <div
      class="form-group"
    >
      <input
        class="theme-tc-editable-text-form-input tc-editable-text-form-input form-control"
        id="inputTitle"
        type="text"
        value="my text"
      />
    </div>
    <div
      class="theme-tc-editable-text-form-buttons tc-editable-text-form-buttons"
    >
      <button
        aria-describedby="42"
        class="theme-tc-editable-text-form-buttons-icon tc-editable-text-form-buttons-icon theme-tc-editable-text-form-buttons-cancel tc-editable-text-form-buttons-cancel btn-icon-only btn btn-link"
        data-feature="my.custom.feature.cancel"
        name="action-cancel-title"
        type="button"
      >
        <span
          class="CoralIcon"
          name="talend-cross"
        />
      </button>
      <button
        aria-describedby="42"
        class="theme-tc-editable-text-form-buttons-icon tc-editable-text-form-buttons-icon theme-tc-editable-text-form-buttons-submit tc-editable-text-form-buttons-submit btn-icon-only btn btn-link"
        data-feature="my.custom.feature.submit"
        name="action-submit-title"
        type="submit"
      >
        <span
          class="CoralIcon"
          name="talend-check"
        />
      </button>
    </div>
  </form>
</div>
`;
